<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:paddingHorizontal="@dimen/padding_weather_list_fragment"
        android:paddingTop="@dimen/padding_weather_details_fragment"
        tools:context=".citieslist.CitiesListFragment">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/newCityWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_city_input">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/addCityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/add_city_button" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>