<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    tools:context=".weatherdetails.forecast.ForecastFragment">

    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/combined_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_bars" />

</FrameLayout>